--- a/moore_machine/index.html
+++ b/moore_machine/index.html
@@ -21,7 +21,7 @@
 
   <body>
     <div class="container">
-      <h1 class="text-center">Mealy Machine (Ödev 27)</h1>
+      <h1 class="text-center">Moore Machine (Ödev 26)</h1>
       <br />
       <h3 class="text-center">BÜNYAMİN KIRMIZI</h3>
       <br />
@@ -43,7 +43,7 @@
             <small id="emailHelp" class="form-text text-muted"></small>
           </div>
           <div class="form-group row">
-            <label for="inputPassword" class="col-sm-1 col-form-label">
+            <label for="inputInputAlphabet" class="col-sm-1 col-form-label">
               <strong>&Sigma;</strong>=</label
             >
             <div class="col-sm-11">
@@ -57,7 +57,7 @@
             <small id="emailHelp" class="form-text text-muted"></small>
           </div>
           <div class="form-group row">
-            <label for="inputPassword" class="col-sm-1 col-form-label"
+            <label for="inputOutputAlphabet" class="col-sm-1 col-form-label"
               ><strong>&Gamma;</strong>=</label
             >
             <div class="col-sm-11">
@@ -68,7 +68,7 @@
                 placeholder="Output symbols alphabet e.g. 0,1"
               />
             </div>
-            <small id="emailHelp" class="form-text text-muted text-info"
+            <small id="help" class="form-text text-muted text-info"
               >The symbols alphabets must separate with ',' symbol. And for
               state you've enter numeric value</small
             >
