--- a/mealy_machine/index.html
+++ b/mealy_machine/index.html
@@ -74,7 +74,7 @@
             >
           </div>
           <div class="mt-4" id="table-main"></div>
-          <div class="col-md-12 text-center">
+          <div class="col-md-12 mb-2 text-center">
             <button
               class="btn btn-primary text-center"
               type="button"
